# pulsestream

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy.yaml
adapter/: Dockerfile  main.py  pyproject.toml
adapter/adapter/: __init__.py  normalize.py  publisher.py
adapter/tests/: test_normalize.py  test_publisher.py
infra/terraform/: backend.tf  bigquery.tf  iam.tf  monitoring.tf  outputs.tf  provider.tf  pubsub.tf  run.tf  scheduler.tf  terraform.tfvars.example  variables.tf
mapper/: Dockerfile  main.py  pyproject.toml
mapper/mapper/: __init__.py  backend.py  validation.py
mapper/tests/: test_contract.py  test_handler.py  test_validation.py
redrive/: Dockerfile  main.py  pyproject.toml
redrive/redrive/: __init__.py  drainer.py  logger.py
redrive/tests/: test_drainer.py
schemas/: event.schema.json
